# keyboard_hero

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
app/: CMakeLists.txt  INSTRUCTIONS.txt  KeyboardHero.db  app.cpp  database.txt  global.hpp
app/src/: FT232H_device.cpp  FT232H_device.hpp  app.cpp  create.cpp  create.hpp  db.cpp  db.hpp  deletion.cpp  deletion.hpp  edit.cpp  edit.hpp  global.hpp  menu.cpp  menu.hpp  picker.cpp  picker.hpp  play.cpp  play.hpp  text_display.cpp  text_display.hpp  util.cpp  util.hpp
engine/: CMakeLists.txt  rendersystemnotes
engine/include/: sy_ambiguous_vector.hpp  sy_ecs.hpp  sy_macros.hpp  sy_syengine.hpp
engine/src/: .#sy_syengine.cpp  sy_ambiguous_vector.cpp  sy_ambiguous_vector.hpp  sy_app_info.hpp  sy_arena.cpp  sy_arena.hpp  sy_ecs.cpp  sy_ecs.hpp  sy_input_info.hpp  sy_linux_entry.cpp  sy_linux_input.cpp  sy_linux_input.hpp  sy_linux_window.cpp  sy_linux_window.hpp  sy_macros.hpp  sy_platform_info.hpp  sy_syengine.cpp  sy_syengine.hpp  sy_utils.cpp  sy_utils.hpp
engine/src/asset_system/: sy_asset_system.cpp  sy_asset_system.hpp  sy_obj_parser.cpp
engine/src/components/: sy_pitch_yaw_roll.hpp  sy_transform.hpp
engine/src/obj_parser/: sy_obj_parser.hpp
engine/src/render/: sy_buffer.cpp  sy_buffer.hpp  sy_descriptor_allocator.cpp  sy_descriptor_allocator.hpp  sy_descriptor_set_data.hpp  sy_drawing.cpp  sy_drawing.hpp  sy_fonts.cpp  sy_fonts.hpp  sy_frame_uniform_data.hpp  sy_frame_uniform_data_info.hpp  sy_image.cpp  sy_image.hpp  sy_linux_init.cpp  sy_linux_init.hpp  sy_logical_device.cpp  sy_logical_device.hpp  sy_opaque_types.hpp  sy_physical_device.cpp  sy_physical_device.hpp  sy_pipeline.cpp  sy_pipeline.hpp  sy_render.cpp  sy_render.hpp  sy_render_defines.hpp  sy_render_info.cpp  sy_render_info.hpp  sy_render_settings.hpp  sy_resources.cpp  sy_resources.hpp  sy_swapchain.cpp  sy_swapchain.hpp
engine/src/render/types/: sy_asset_metadata.hpp  sy_draw_info.hpp  sy_material.hpp  sy_mesh.cpp  sy_mesh.hpp  sy_ui_text.hpp
engine/src/sound/: sy_play.cpp  sy_play.hpp  sy_sound.cpp  sy_sound.hpp
engine/src/sound/types/: sy_audio.hpp  sy_audio_info.hpp  sy_audio_properties.hpp
engine/src/types/: sy_camera_settings.hpp
resources/single_color/: frag.spv  fragment.spv  shader.frag  shader.vert  vertex.spv
resources/text/: fragment.spv  shader.frag  shader.vert  vertex.spv
